--- a/nss/all/test_package/CMakeLists.txt
+++ b/nss/all/test_package/CMakeLists.txt
@@ -1,9 +1,10 @@
 cmake_minimum_required(VERSION 3.1)
 project(test_package C)
 
-include(${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
-conan_basic_setup(TARGETS)
+find_package(nss)
 
 add_executable(${PROJECT_NAME} test_package.c)
-target_link_libraries(${PROJECT_NAME} CONAN_PKG::nss)
+target_include_directories(${PROJECT_NAME} PUBLIC ${nss_INCLUDE_DIRS})
+target_link_libraries(${PROJECT_NAME} nss::nss)
+
 
