--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -1489,28 +1489,28 @@ jobs:
     - name: deploy
       run: conan upload "*" -r cps-artifactory -c
 
-  build-nss:
-    runs-on: ubuntu-latest
-    env: # Or as an environment variable
-      ARTIFACTORY_URL: ${{ secrets.ARTIFACTORY_URL }}
-      ARTIFACTORY_TOKEN: ${{ secrets.ARTIFACTORY_TOKEN }}
-    needs: [build-zlib, build-nspr, build-sqlite3]
-    steps:
-    - uses: actions/checkout@v4
-    - name: prepare runner
-      run: | 
-        sudo apt update && sudo apt -y install make autoconf python3 python3-pip cmake libgl-dev libgl1-mesa-dev xkb-data libx11-xcb-dev libfontenc-dev libxaw7-dev libxcomposite-dev libxcursor-dev libxdamage-dev libxfixes-dev libxi-dev libxinerama-dev libxkbfile-dev libxmu-dev libxmuu-dev libxpm-dev libxrandr-dev libxres-dev libxss-dev libxtst-dev libxv-dev libxxf86vm-dev libxcb-glx0-dev libxcb-render-util0-dev libxcb-xkb-dev libxcb-icccm4-dev libxcb-image0-dev libxcb-keysyms1-dev libxcb-randr0-dev libxcb-shape0-dev libxcb-sync-dev libxcb-xfixes0-dev libxcb-xinerama0-dev libxcb-dri3-dev libxcb-cursor-dev libxcb-dri2-0-dev libxcb-dri3-dev libxcb-present-dev libxcb-composite0-dev libxcb-ewmh-dev libxcb-res0-dev libxcb-util-dev
-        sudo pip install --upgrade conan
-        conan profile detect
-        conan remote add cps-artifactory http://v2202410237013289389.luckysrv.de:8081/artifactory/api/conan/conan
-        conan remote login -p $ARTIFACTORY_TOKEN cps-artifactory cps-gitlab-runner
-        conan remote remove conancenter
-    - name: build_release
-      run: conan create ./nss/all --name=nss --version=3.93
-    - name: build debug
-      run: conan create ./nss/all --name=nss --version=3.93 -s build_type=Debug
-    - name: deploy
-      run: conan upload "*" -r cps-artifactory -c
+  # build-nss:
+  #   runs-on: ubuntu-latest
+  #   env: # Or as an environment variable
+  #     ARTIFACTORY_URL: ${{ secrets.ARTIFACTORY_URL }}
+  #     ARTIFACTORY_TOKEN: ${{ secrets.ARTIFACTORY_TOKEN }}
+  #   needs: [build-zlib, build-nspr, build-sqlite3]
+  #   steps:
+  #   - uses: actions/checkout@v4
+  #   - name: prepare runner
+  #     run: | 
+  #       sudo apt update && sudo apt -y install make autoconf python3 python3-pip cmake libgl-dev libgl1-mesa-dev xkb-data libx11-xcb-dev libfontenc-dev libxaw7-dev libxcomposite-dev libxcursor-dev libxdamage-dev libxfixes-dev libxi-dev libxinerama-dev libxkbfile-dev libxmu-dev libxmuu-dev libxpm-dev libxrandr-dev libxres-dev libxss-dev libxtst-dev libxv-dev libxxf86vm-dev libxcb-glx0-dev libxcb-render-util0-dev libxcb-xkb-dev libxcb-icccm4-dev libxcb-image0-dev libxcb-keysyms1-dev libxcb-randr0-dev libxcb-shape0-dev libxcb-sync-dev libxcb-xfixes0-dev libxcb-xinerama0-dev libxcb-dri3-dev libxcb-cursor-dev libxcb-dri2-0-dev libxcb-dri3-dev libxcb-present-dev libxcb-composite0-dev libxcb-ewmh-dev libxcb-res0-dev libxcb-util-dev
+  #       sudo pip install --upgrade conan
+  #       conan profile detect
+  #       conan remote add cps-artifactory http://v2202410237013289389.luckysrv.de:8081/artifactory/api/conan/conan
+  #       conan remote login -p $ARTIFACTORY_TOKEN cps-artifactory cps-gitlab-runner
+  #       conan remote remove conancenter
+  #   - name: build_release
+  #     run: conan create ./nss/all --name=nss --version=3.93
+  #   - name: build debug
+  #     run: conan create ./nss/all --name=nss --version=3.93 -s build_type=Debug
+  #   - name: deploy
+  #     run: conan upload "*" -r cps-artifactory -c
 
   build-openssl:
     runs-on: ubuntu-latest
@@ -1933,7 +1933,7 @@ jobs:
     env: # Or as an environment variable
       ARTIFACTORY_URL: ${{ secrets.ARTIFACTORY_URL }}
       ARTIFACTORY_TOKEN: ${{ secrets.ARTIFACTORY_TOKEN }}
-    needs: [build-zlib, build-openssl, build-pcre2, build-glib, build-double-conversion, build-freetype, build-fontconfig, build-icu, build-harfbuzz, build-libpng, build-libpq, build-odbc, build-wayland, build-nss]
+    needs: [build-zlib, build-openssl, build-pcre2, build-glib, build-double-conversion, build-freetype, build-fontconfig, build-icu, build-harfbuzz, build-libpng, build-libpq, build-odbc, build-wayland]
     steps:
     - uses: actions/checkout@v4
     - name: prepare runner
