--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -33,6 +33,8 @@ jobs:
       run: |
         conan create ./m4/all --name=m4 --version=1.4.20 --build-require -s build_type=Debug --build missing
         conan upload "*" -r protestator-conan -c
+    - name: cleanup
+      run: conan remove "*" -c
 
   build-cmake:
     runs-on: self-hosted
@@ -59,6 +61,8 @@ jobs:
       run: |
         conan create ./cmake/binary --name=cmake --version=4.1.2 --build-require -s build_type=Debug
         conan upload "*" -r protestator-conan -c
+    - name: cleanup
+      run: conan remove "*" -c
 
   build-autoconf:
     runs-on: self-hosted
@@ -83,6 +87,8 @@ jobs:
       run: conan create ./autoconf/all --name=autoconf --version=2.72 --build-require -s build_type=Debug
     - name: deploy
       run: conan upload "*" -r protestator-conan -c
+    - name: cleanup
+      run: conan remove "*" -c
   
   build-automake:
     runs-on: self-hosted
@@ -107,6 +113,8 @@ jobs:
       run: conan create ./automake/all --name=automake --version=1.16.5 --build-require -s build_type=Debug
     - name: deploy
       run: conan upload "*" -r protestator-conan -c
+    - name: cleanup
+      run: conan remove "*" -c
   
   build-ninja:
     runs-on: self-hosted
@@ -133,6 +141,8 @@ jobs:
       run: | 
         conan create ./ninja/all --name=ninja --version=1.13.1 --build-require -s build_type=Debug --build missing
         conan upload "*" -r protestator-conan -c
+    - name: cleanup
+      run: conan remove "*" -c
 
 
   build-meson:
@@ -159,6 +169,8 @@ jobs:
       run: conan create ./meson/all --name=meson --version=1.9.1 --build-require -s build_type=Debug
     - name: deploy
       run: conan upload "*" -r protestator-conan -c
+    - name: cleanup
+      run: conan remove "*" -c
 
   build-pkgconf:
     runs-on: self-hosted
@@ -183,6 +195,8 @@ jobs:
       run: conan create ./pkgconf/all --name=pkgconf --version=2.5.1 --build-require --build missing -s build_type=Debug
     - name: deploy
       run: conan upload "*" -r protestator-conan -c
+    - name: cleanup
+      run: conan remove "*" -c
 
   build-xorg:
     runs-on: self-hosted
@@ -207,6 +221,8 @@ jobs:
       run: conan create ./xorg/all --name=xorg --version=system -s build_type=Debug
     - name: deploy
       run: conan upload "*" -r protestator-conan -c
+    - name: cleanup
+      run: conan remove "*" -c
   
   build-xkeyboard-config:
     runs-on: self-hosted
@@ -231,6 +247,8 @@ jobs:
       run: conan create ./xkeyboard-config/all --name=xkeyboard-config --version=system -s build_type=Debug
     - name: deploy
       run: conan upload "*" -r protestator-conan -c
+    - name: cleanup
+      run: conan remove "*" -c
 
   build-gnu-config:
     runs-on: self-hosted
@@ -256,6 +274,8 @@ jobs:
       run: conan create ./gnu-config/all --name=gnu-config --version=cci.20210814 -s build_type=Debug
     - name: deploy
       run: conan upload "*" -r protestator-conan -c
+    - name: cleanup
+      run: conan remove "*" -c
 
   build-opengl:
     runs-on: self-hosted
@@ -281,6 +301,8 @@ jobs:
       run: conan create ./opengl/all --name=opengl --version=system -s build_type=Debug
     - name: deploy
       run: conan upload "*" -r protestator-conan -c
+    - name: cleanup
+      run: conan remove "*" -c
 
   build-b2:
     runs-on: self-hosted
@@ -308,6 +330,8 @@ jobs:
       run: | 
         conan create ./b2/portable --name=b2 --version=5.3.3 -s build_type=Debug
         conan upload "*" -r protestator-conan -c
+    - name: cleanup
+      run: conan remove "*" -c
 
   build-lz4:
     runs-on: self-hosted
@@ -335,6 +359,8 @@ jobs:
       run: |
         conan create ./lz4/all --name=lz4 --version=1.9.4 -s build_type=Debug
         conan upload "*" -r protestator-conan -c
+    - name: cleanup
+      run: conan remove "*" -c
 
   build-nasm:
     runs-on: self-hosted
@@ -360,6 +386,8 @@ jobs:
       run: conan create ./nasm/all --name=nasm --version=2.16.01 -s build_type=Debug
     - name: deploy
       run: conan upload "*" -r protestator-conan -c
+    - name: cleanup
+      run: conan remove "*" -c
 
   build-linux-headers-generic:
     runs-on: self-hosted
@@ -385,6 +413,8 @@ jobs:
       run: conan create ./linux-headers-generic/all --name=linux-headers-generic --version=6.5.9 -s build_type=Debug
     - name: deploy
       run: conan upload "*" -r protestator-conan -c
+    - name: cleanup
+      run: conan remove "*" -c
 
   build-antlr-runtime:
     runs-on: self-hosted
@@ -410,6 +440,8 @@ jobs:
       run: conan create ./antlr4-cppruntime/all --name=antlr4-cppruntime --version=4.13.2 -s build_type=Debug
     - name: deploy
       run: conan upload "*" -r protestator-conan -c
+    - name: cleanup
+      run: conan remove "*" -c
 
   build-zlib:
     runs-on: self-hosted
@@ -435,6 +467,8 @@ jobs:
       run: conan create ./zlib/all --name=zlib --version=1.3.1 -s build_type=Debug
     - name: deploy
       run: conan upload "*" -r protestator-conan -c
+    - name: cleanup
+      run: conan remove "*" -c
 
   build-bzip2:
     runs-on: self-hosted
@@ -460,6 +494,8 @@ jobs:
       run: conan create ./bzip2/all --name=bzip2 --version=1.0.8 -s build_type=Debug
     - name: deploy
       run: conan upload "*" -r protestator-conan -c
+    - name: cleanup
+      run: conan remove "*" -c
 
   build-brotli:
     runs-on: self-hosted
@@ -485,6 +521,8 @@ jobs:
       run: conan create ./brotli/all --name=brotli --version=1.1.0 -s build_type=Debug
     - name: deploy
       run: conan upload "*" -r protestator-conan -c
+    - name: cleanup
+      run: conan remove "*" -c
 
   build-double-conversion:
     runs-on: self-hosted
@@ -510,6 +548,8 @@ jobs:
       run: conan create ./double-conversion/all --name=double-conversion --version=3.3.0 -s build_type=Debug
     - name: deploy
       run: conan upload "*" -r protestator-conan -c
+    - name: cleanup
+      run: conan remove "*" -c
 
   build-expat:
     runs-on: self-hosted
@@ -537,6 +577,8 @@ jobs:
       run: |
         conan create ./expat/all --name=expat --version=2.7.3 -s build_type=Debug --build missing
         conan upload "*" -r protestator-conan -c
+    - name: cleanup
+      run: conan remove "*" -c
 
   build-flex:
     runs-on: self-hosted
@@ -562,6 +604,8 @@ jobs:
       run: conan create ./flex/all --name=flex --version=2.6.4 --build missing -s build_type=Debug
     - name: deploy
       run: conan upload "*" -r protestator-conan -c
+    - name: cleanup
+      run: conan remove "*" -c
   
   build-bison:
     runs-on: self-hosted
@@ -587,6 +631,8 @@ jobs:
       run: conan create ./bison/all --name=bison --version=3.8.2 --build-require -s build_type=Debug
     - name: deploy
       run: conan upload "*" -r protestator-conan -c
+    - name: cleanup
+      run: conan remove "*" -c
 
   build-gperf:
     runs-on: self-hosted
@@ -611,6 +657,8 @@ jobs:
       run: conan create ./gperf/all --name=gperf --version=3.1 --build-require -s build_type=Debug
     - name: deploy
       run: conan upload "*" -r protestator-conan -c
+    - name: cleanup
+      run: conan remove "*" -c
 
   build-icu:
     runs-on: self-hosted
@@ -635,6 +683,8 @@ jobs:
       run: conan create ./icu/all --name=icu --version=77.1 -s build_type=Debug
     - name: deploy
       run: conan upload "*" -r protestator-conan -c
+    - name: cleanup
+      run: conan remove "*" -c
 
   build-libbacktrace:
     runs-on: self-hosted
@@ -685,6 +735,8 @@ jobs:
       run: conan create ./libelf/all --name=libelf --version=0.8.13 -s build_type=Debug
     - name: deploy
       run: conan upload "*" -r protestator-conan -c
+    - name: cleanup
+      run: conan remove "*" -c
   
   build-libpng:
     runs-on: self-hosted
@@ -711,6 +763,8 @@ jobs:
       run: |
         conan create ./libpng/all --name=libpng --version=1.6.50 -s build_type=Debug
         conan upload "*" -r protestator-conan -c
+    - name: cleanup
+      run: conan remove "*" -c
 
   build-libffi:
     runs-on: self-hosted
@@ -737,6 +791,8 @@ jobs:
       run: |
         conan create ./libffi/all --name=libffi --version=3.4.8 -s build_type=Debug
         conan upload "*" -r protestator-conan -c
+    - name: cleanup
+      run: conan remove "*" -c
 
   build-libiconv:
     runs-on: self-hosted
@@ -763,6 +819,8 @@ jobs:
       run: |
         conan create ./libiconv/all --name=libiconv --version=1.17 -s build_type=Debug --build missing
         conan upload "*" -r protestator-conan -c
+    - name: cleanup
+      run: conan remove "*" -c
 
 
   build-libmount:
@@ -790,6 +848,8 @@ jobs:
       run: | 
         conan create ./libmount/all --name=libmount --version=2.40.2 -s build_type=Debug --build missing
         conan upload "*" -r protestator-conan -c
+    - name: cleanup
+      run: conan remove "*" -c
 
   build-md4c:
     runs-on: self-hosted
@@ -816,6 +876,8 @@ jobs:
       run: |
         conan create ./md4c/all --name=md4c --version=0.5.2 -s build_type=Debug
         conan upload "*" -r protestator-conan -c
+    - name: cleanup
+      run: conan remove "*" -c
 
   build-nlohmann_json:
     runs-on: self-hosted
@@ -842,6 +904,8 @@ jobs:
       run: |
         conan create ./nlohmann_json/all --name=nlohmann_json --version=3.11.3 -s build_type=Debug --build missing
         conan upload "*" -r protestator-conan -c
+    - name: cleanup
+      run: conan remove "*" -c
 
   build-sqlite3:
     runs-on: self-hosted
@@ -868,6 +932,8 @@ jobs:
       run: |
         conan create ./sqlite3/all --name=sqlite3 --version=3.50.4 -s build_type=Debug --build missing
         conan upload "*" -r protestator-conan -c
+    - name: cleanup
+      run: conan remove "*" -c
 
   build-libtool:
     runs-on: self-hosted
@@ -894,6 +960,8 @@ jobs:
       run: | 
         conan create ./libtool/all --name=libtool --version=2.4.7 -s build_type=Debug --build missing
         conan upload "*" -r protestator-conan -c
+    - name: cleanup
+      run: conan remove "*" -c
 
   build-nspr:
     runs-on: self-hosted
@@ -918,6 +986,8 @@ jobs:
       run: conan create ./nspr/all --name=nspr --version=4.35 -s build_type=Debug
     - name: deploy
       run: conan upload "*" -r protestator-conan -c
+    - name: cleanup
+      run: conan remove "*" -c
 
   build-util-linux-libuuid:
     runs-on: self-hosted
@@ -942,6 +1012,8 @@ jobs:
       run: conan create ./util-linux-libuuid/all --name=util-linux-libuuid --version=2.39.2 -s build_type=Debug
     - name: deploy
       run: conan upload "*" -r protestator-conan -c
+    - name: cleanup
+      run: conan remove "*" -c
 
   build-pcre2:
     runs-on: self-hosted
@@ -969,6 +1041,8 @@ jobs:
       run: |
         conan create ./pcre2/all --name=pcre2 --version=10.44 -s build_type=Debug --build missing
         conan upload "*" -r protestator-conan -c
+    - name: cleanup
+      run: conan remove "*" -c
 
   build-xz_utils:
     runs-on: self-hosted
@@ -995,6 +1069,8 @@ jobs:
       run: |
         conan create ./xz_utils/all --name=xz_utils --version=5.4.5 -s build_type=Debug --build missing
         conan upload "*" -r protestator-conan -c
+    - name: cleanup
+      run: conan remove "*" -c
 
   build-gettext:
     runs-on: self-hosted
@@ -1021,6 +1097,8 @@ jobs:
       run: |
         conan create ./gettext/all --name=gettext --version=0.22.5 -s build_type=Debug --build missing
         conan upload "*" -r protestator-conan -c
+    - name: cleanup
+      run: conan remove "*" -c
 
   build-zstd:
     runs-on: self-hosted
@@ -1047,6 +1125,8 @@ jobs:
       run: |
         conan create ./zstd/all --name=zstd --version=1.5.7 -s build_type=Debug --build missing
         conan upload "*" -r protestator-conan -c
+    - name: cleanup
+      run: conan remove "*" -c
 
   build-elfutils:
     runs-on: self-hosted
@@ -1074,6 +1154,8 @@ jobs:
       run: |
         conan create ./elfutils/all --name=elfutils --version=0.190 -s build_type=Debug --build missing
         conan upload "*" -r protestator-conan -c
+    - name: cleanup
+      run: conan remove "*" -c
 
   build-openssl:
     runs-on: self-hosted
@@ -1101,6 +1183,8 @@ jobs:
       run: |
         conan create ./openssl/3.x.x --name=openssl --version=3.6.0 -s build_type=Debug --build missing
         conan upload "*" -r protestator-conan -c
+    - name: cleanup
+      run: conan remove "*" -c
 
   build-odbc:
     runs-on: self-hosted
@@ -1126,6 +1210,8 @@ jobs:
       run: conan create ./odbc/all --name=odbc --version=2.3.11 -s build_type=Debug
     - name: deploy
       run: conan upload "*" -r protestator-conan -c
+    - name: cleanup
+      run: conan remove "*" -c
 
   build-libxml2:
     runs-on: self-hosted
@@ -1153,6 +1239,8 @@ jobs:
       run: | 
         conan create ./libxml2/cmake --name=libxml2 --version=2.15.0 -s build_type=Debug
         conan upload "*" -r protestator-conan -c
+    - name: cleanup
+      run: conan remove "*" -c
   
   build-freetype:
     runs-on: self-hosted
@@ -1180,6 +1268,8 @@ jobs:
       run: |
         conan create ./freetype/meson --name=freetype --version=2.14.1 -s build_type=Debug --build missing
         conan upload "*" -r protestator-conan -c
+    - name: cleanup
+      run: conan remove "*" -c
 
 
   build-fontconfig:
@@ -1206,6 +1296,8 @@ jobs:
       run: conan create ./fontconfig/all --name=fontconfig --version=2.15.0 -s build_type=Debug
     - name: deploy
       run: conan upload "*" -r protestator-conan -c
+    - name: cleanup
+      run: conan remove "*" -c
   
   build-wayland:
     runs-on: self-hosted
@@ -1233,6 +1325,8 @@ jobs:
       run: | 
         conan create ./wayland/all --name=wayland --version=1.22.0 -s build_type=Debug
         conan upload "*" -r protestator-conan -c
+    - name: cleanup
+      run: conan remove "*" -c
 
   build-wayland-protocols:
     runs-on: self-hosted
@@ -1260,6 +1354,8 @@ jobs:
       run: |
         conan create ./wayland-protocols/all --name=wayland-protocols --version=1.45 --build-require -s build_type=Debug
         conan upload "*" -r protestator-conan -c
+    - name: cleanup
+      run: conan remove "*" -c
 
 
   build-boost:
@@ -1288,6 +1384,8 @@ jobs:
       run: |
         conan create ./boost/all --name=boost --version=1.89.0 -s build_type=Debug
         conan upload "*" -r protestator-conan -c
+    - name: cleanup
+      run: conan remove "*" -c
 
   build-redboltz-mqtt_cpp:
     runs-on: self-hosted
@@ -1313,6 +1411,8 @@ jobs:
       run: conan create ./redboltz-mqtt_cpp/all --name=redboltz-mqtt_cpp --version=13.2.1 -s build_type=Debug
     - name: deploy
       run: conan upload "*" -r protestator-conan -c
+    - name: cleanup
+      run: conan remove "*" -c
 
   build-async_mqtt:
     runs-on: self-hosted
@@ -1338,6 +1438,8 @@ jobs:
       run: conan create ./async_mqtt/all --name=async-mqtt --version=8.0.1 -s build_type=Debug
     - name: deploy
       run: conan upload "*" -r protestator-conan -c
+    - name: cleanup
+      run: conan remove "*" -c
 
   build-libxslt:
     runs-on: self-hosted
@@ -1365,6 +1467,8 @@ jobs:
       run: |
         conan create ./libxslt/all --name=libxslt --version=1.1.43 -s build_type=Debug --build missing
         conan upload "*" -r protestator-conan -c
+    - name: cleanup
+      run: conan remove "*" -c
 
   build-readline:
     runs-on: self-hosted
@@ -1392,6 +1496,8 @@ jobs:
       run: |
         conan create ./readline/all --name=readline --version=8.2 -s build_type=Debug --build missing
         conan upload "*" -r protestator-conan -c
+    - name: cleanup
+      run: conan remove "*" -c
 
   build-libpq:
     runs-on: self-hosted
@@ -1419,6 +1525,8 @@ jobs:
       run: |
         conan create ./libpq/meson --name=libpq --version=17.5 -s build_type=Debug --build missing
         conan upload "*" -r protestator-conan -c
+    - name: cleanup
+      run: conan remove "*" -c
 
   build-libcurl:
     runs-on: self-hosted
@@ -1446,6 +1554,8 @@ jobs:
       run: | 
         conan create ./libcurl/all --name=libcurl --version=8.16.0 -s build_type=Debug --build missing
         conan upload "*" -r protestator-conan -c
+    - name: cleanup
+      run: conan remove "*" -c
 
   build-date:
     runs-on: self-hosted
@@ -1473,6 +1583,8 @@ jobs:
       run: |
         conan create ./date/all --name=date --version=3.0.4 -s build_type=Debug
         conan upload "*" -r protestator-conan -c
+    - name: cleanup
+      run: conan remove "*" -c
 
   build-libselinux:
     runs-on: self-hosted
@@ -1498,6 +1610,8 @@ jobs:
       run: conan create ./libselinux/all --name=libselinux --version=3.6 -s build_type=Debug
     - name: deploy
       run: conan upload "*" -r protestator-conan -c
+    - name: cleanup
+      run: conan remove "*" -c
 
   build-glib:
     runs-on: self-hosted
@@ -1525,6 +1639,8 @@ jobs:
       run: |
         conan create ./glib/all --name=glib --version=2.85.3 -s build_type=Debug
         conan upload "*" -r protestator-conan -c
+    - name: cleanup
+      run: conan remove "*" -c
 
   build-xkbcommon:
     runs-on: self-hosted
@@ -1552,6 +1668,8 @@ jobs:
       run: |
         conan create ./xkbcommon/all --name=xkbcommon --version=1.6.0 -s build_type=Debug
         conan upload "*" -r protestator-conan -c
+    - name: cleanup
+      run: conan remove "*" -c
 
   build-gtest:
     runs-on: self-hosted
@@ -1579,6 +1697,8 @@ jobs:
       run: |
         conan create ./gtest/all --name=gtest --version=1.17.0 -s build_type=Debug
         conan upload "*" -r protestator-conan -c
+    - name: cleanup
+      run: conan remove "*" -c
 
   build-harfbuzz:
     runs-on: self-hosted
@@ -1606,6 +1726,8 @@ jobs:
       run: |
         conan create ./harfbuzz/all --name=harfbuzz --version=11.4.1 -s build_type=Debug
         conan upload "*" -r protestator-conan -c
+    - name: cleanup
+      run: conan remove "*" -c
 
   build-qt:
     runs-on: self-hosted
@@ -1629,6 +1751,8 @@ jobs:
       run: | 
         conan create ./qt/6.x.x --name=qt --version=6.8.3
         conan upload "*" -r protestator-conan -c
+    - name: cleanup
+      run: conan remove "*" -c
 
   build-qt-debug:
     runs-on: self-hosted
@@ -1652,6 +1776,8 @@ jobs:
       run: |
         conan create ./qt/6.x.x --name=qt --version=6.8.3 -s build_type=Debug
         conan upload "*" -r protestator-conan -c
+    - name: cleanup
+      run: conan remove "*" -c
   
 
   # build-z3:
@@ -1945,6 +2071,8 @@ jobs:
       run: conan create ./termcap/all --name=termcap --version=1.3.1 -s build_type=Debug
     - name: deploy
       run: conan upload "*" -r protestator-conan -c
+    - name: cleanup
+      run: conan remove "*" -c
 
   # build-editline:
   #   needs: [build-termcap, build-ncurses]
