--- a/mongo-c-driver/config.yml
+++ b/mongo-c-driver/config.yml
@@ -1,17 +1,19 @@
 versions:
   "1.30.3":
-    folder: all
+    folder: 1.X.X
   "1.29.2":
-    folder: all
+    folder: 1.X.X
   "1.29.1":
-    folder: all
+    folder: 1.X.X
   "1.29.0":
-    folder: all
+    folder: 1.X.X
   "1.28.1":
-    folder: all
+    folder: 1.X.X
   "1.27.6":
-    folder: all
+    folder: 1.X.X
   "1.26.2":
-    folder: all
+    folder: 1.X.X
   "1.24.3":
-    folder: all
+    folder: 1.X.X
+  "2.2.0":
+    folder: 2.X.X
