Add some builds for windows

--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -889,7 +889,30 @@ jobs:
         conan create ./libiconv/all --name=libiconv --version=1.17 -s build_type=Debug --build missing
         conan upload "*" -r protestator-conan -c
 
-
+  build-libiconv-windows:
+    runs-on: windows-latest
+    env: # Or as an environment variable
+      ARTIFACTORY_URL: ${{ secrets.ARTIFACTORY_URL }}
+      ARTIFACTORY_TOKEN: ${{ secrets.ARTIFACTORY_TOKEN }}
+      ARTIFACTORY_USER: ${{ secrets.ARTIFACTORY_USERNAME }}
+    steps:
+    - uses: actions/checkout@v4
+    - uses: jfrog/setup-jfrog-cli@v4
+    - name: prepare runner
+      run: | 
+        pip install conan --break-system-packages
+        conan profile detect
+        conan remote add protestator-conan $env:ARTIFACTORY_URL
+        conan remote login -p $env:ARTIFACTORY_TOKEN protestator-conan $env:ARTIFACTORY_USER
+        conan remote remove conancenter
+    - name: build release
+      run: |
+        conan create ./libiconv/all --name=libiconv --version=1.17
+        conan upload "*" -r protestator-conan -c
+    - name: build debug
+      run: |
+        conan create ./libiconv/all --name=libiconv --version=1.17 -s build_type=Debug --build missing
+        conan upload "*" -r protestator-conan -c
 
   build-libmount:
     runs-on: ubuntu-latest
@@ -1961,6 +1984,32 @@ jobs:
     - name: debug
       run: | 
         conan create ./msys2/all --name=msys2 --version=cci.latest -s build_type=Debug -o shared=True
+        conan upload "*" -r protestator-conan -c
+
+  build-libgettext:
+    needs: build-libiconv-windows
+    runs-on: windows-latest
+    env: # Or as an environment variable
+      ARTIFACTORY_URL: ${{ secrets.ARTIFACTORY_URL }}
+      ARTIFACTORY_TOKEN: ${{ secrets.ARTIFACTORY_TOKEN }}
+      ARTIFACTORY_USER: ${{ secrets.ARTIFACTORY_USERNAME }}
+    steps:
+    - uses: actions/checkout@v4
+    - uses: jfrog/setup-jfrog-cli@v4
+    - name: prepare runner
+      run: | 
+        pip install conan --break-system-packages
+        conan profile detect
+        conan remote add protestator-conan $env:ARTIFACTORY_URL
+        conan remote login -p $env:ARTIFACTORY_TOKEN protestator-conan $env:ARTIFACTORY_USER
+        conan remote remove conancenter
+    - name: release
+      run: |
+        conan create ./libgettext/all --name=libgettext --version=0.22 -o shared=True
+        conan upload "*" -r protestator-conan -c 
+    - name: debug
+      run: | 
+        conan create ./libgettext/all --name=libgettext --version=0.22 -s build_type=Debug -o shared=True
         conan upload "*" -r protestator-conan -c 
 
   # build-z3:
